secrets-manager-usage/tests/fails/unknown_env.stderr
error: received envs dev,fake but only matched these secrets: /dev/secrets-manager-test-secret
 --> tests/fails/unknown_env.rs:4:8
  |
4 | struct SecretsManagerTestSecret {}
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
